name:                 ConnectFour
version:              1.0
homepage:             alistairmiles.tech
author:               Alistair Miles
build-type:           Simple
cabal-version:        >=1.10

executable HaskellDev
  main-is:              Main.hs
  build-depends:        base >= 4.7 && < 5,
                        gloss == 1.12.*
  hs-source-dirs:       src
  default-language:     Haskell2010